--- a/services/residentialcleaning.html
+++ b/services/residentialcleaning.html
@@ -139,7 +139,7 @@
      </ul>
    </div>
    <div class="footerimglogo">
-     <img src="../assets/imglogo.png" alt="" draggable="false">
+     <img src="../assets/Frame29.png" alt="" draggable="false">
    </div>
    <div class="adress">
      <p>6th Ave Cleaning Services
