--- a/index.html
+++ b/index.html
@@ -102,30 +102,30 @@
                   </a>
                 </div>
                 <div class="servicescard reveal" id="servicecard1">
-                  <a href="./services/postconstruction.html">
+                  <a href="./services/postconstructioncleaning.html">
                     <img src="./assets/services1.jpg" alt="" draggable="false">
                     <h2>Post Construction Cleaning</h2>
-                    <a class="btnservice btn-1" href="./services/postconstruction.html">
+                    <a class="btnservice btn-1" href="./services/postconstructioncleaning.html">
                       See more  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20L10.575 18.6L16.175 13Z" fill="#002A68"/>
                       </svg></a>
                   </a>
                 </div>
                 <div class="servicescard reveal" id="servicecard2">
-                  <a href="./services/moveinmoveoutcleaning.html">                    
+                  <a href="./services/moveinoutcleaning.html">                    
                     <img src="./assets/services2.jpg" alt="" draggable="false">
                     <h2>Move in  / Out Cleaning</h2>
-                    <a class="btnservice btn-1" href="./services/moveinmoveoutcleaning.html">
+                    <a class="btnservice btn-1" href="./services/moveinoutcleaning.html">
                       See more  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20L10.575 18.6L16.175 13Z" fill="#002A68"/>
                       </svg></a>
                   </a>
                 </div>
                 <div class="servicescard reveal" id="servicecard3">
-                  <a href="./services/officecleaning.html">
+                  <a href="./services/commercialcleaning.html">
                     <img src="./assets/services3.jpg" alt="" draggable="false">
                     <h2>Office & <br> Commercial Cleaning</h2>
-                    <a class="btnservice btn-1" href="./services/officecleaning.html">
+                    <a class="btnservice btn-1" href="./services/commercialcleaning.html">
                       See more  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20L10.575 18.6L16.175 13Z" fill="#002A68"/>
                       </svg></a>
@@ -393,7 +393,7 @@
           </ul>
         </div>
         <div class="footerimglogo">
-          <img src="./assets/imglogo.png" alt="" draggable="false">
+          <img src="./assets/Frame29.png" alt="" draggable="false">
         </div>
         <div class="adress">
           <p>6th Ave Cleaning Services
