--- a/services/moveinoutcleaning.html
+++ b/services/moveinoutcleaning.html
@@ -140,7 +140,7 @@
      </ul>
    </div>
    <div class="footerimglogo">
-     <img src="../assets/imglogo.png" alt="" draggable="false">
+     <img src="../assets/Frame29.png" alt="" draggable="false">
    </div>
    <div class="adress">
      <p>6th Ave Cleaning Services
