--- a/services/postconstructioncleaning.html
+++ b/services/postconstructioncleaning.html
@@ -30,10 +30,10 @@
           <div class="imgbar imgbarw"><img class="logo-header" src="../assets/Frame29.png" alt="logo 6th avenue"></div>
               <div class="menu-linksbtn">
                 <ul>
-                  <li><a href="#"> Home </a></li>
-                  <li><a href="#about"> About </a></li>
-                  <li><a href="#services"> Services </a></li>
-                  <li><a href="#contact"> Contact </a></li>
+                  <li><a href="../index.html#"> Home </a></li>
+                  <li><a href="../index.html#about"> About </a></li>
+                  <li><a href="../index.html#services"> Services </a></li>
+                  <li><a href="../index.html#contact"> Contact </a></li>
                 </ul>
               </div>
               <div class="menusocial">
@@ -122,21 +122,21 @@
    <div class="footermenu1">
      <ul>
        <li>
-         <a href="#">Home</a></li>
+         <a href="../index.html#">Home</a></li>
        <li>
-         <a href="#about">About</a></li>
+         <a href="../index.html#about">About</a></li>
        <li>
-         <a href="#services">Services</a></li>
+         <a href="../index.html#services">Services</a></li>
      </ul>
    </div>
    <div class="footermenu2">
      <ul>
        <li>
-         <a href="#testimonies">Client Reviews</a></li>
+         <a href="../index.html#testimonies">Client Reviews</a></li>
        <li>
-         <a href="#contact">Contact </a></li>
+         <a href="../index.html#contact">Contact </a></li>
        <li>
-         <a href="#contact">Request a Quote</a></li>
+         <a href="../index.html#contact">Request a Quote</a></li>
      </ul>
    </div>
    <div class="footerimglogo">
