googleMB link removed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <li><a href="https://www.facebook.com/profile.php?id=61552970386979" target="_blank">
                     <img src="./assets/facebook-header.svg" alt="">
                     </a></li>
-                    <li><a href="https://www.google.com/search?q=J%26N+Nunes+Cleaning+Services&stick=H4sIAAAAAAAA_-NgU1I1qLAwsUgxNjA3MjUxN0sztzC0MqhINDE3N0lOMUkyMEpJNrRMW8Qq7aXmp-BXmpdarOCck5qYl5mXrhCcWlSWmZxaDACC4lLvRwAAAA&hl=pt-BR&mat=CRPnqhumDNm_ElcBEKoLafWlAoI0YhjJQAKY7j4YY5L8Zq0EsVhCO9lsfADbEFO4kaCUpOlCLyFNj7XqjjQLxFiMK4X0CFNLfLC1DQbivN0Rw9Tc53_K6DGdatBWNkoGZPc&authuser=0" target="_blank">                      
+                    <li><a href="#" target="_blank">                      
                       <img src="./assets/google-mb-header.svg" alt="">
                     </a></li>
                 </ul>
@@ -412,7 +412,7 @@
             <li><a href="https://www.facebook.com/profile.php?id=61552970386979" target="_blank">
               <img src="./assets/facebook-header.svg" alt="">
               </a></li>
-              <li><a href="https://www.google.com/search?q=J%26N+Nunes+Cleaning+Services&stick=H4sIAAAAAAAA_-NgU1I1qLAwsUgxNjA3MjUxN0sztzC0MqhINDE3N0lOMUkyMEpJNrRMW8Qq7aXmp-BXmpdarOCck5qYl5mXrhCcWlSWmZxaDACC4lLvRwAAAA&hl=pt-BR&mat=CRPnqhumDNm_ElcBEKoLafWlAoI0YhjJQAKY7j4YY5L8Zq0EsVhCO9lsfADbEFO4kaCUpOlCLyFNj7XqjjQLxFiMK4X0CFNLfLC1DQbivN0Rw9Tc53_K6DGdatBWNkoGZPc&authuser=0" target="_blank">                      
+              <li><a href="#" target="_blank">                      
                 <img src="./assets/google-mb-header.svg" alt="">
               </a></li>
           </ul>
