--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Urbanist:wght@400;500;600;800;900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
+  <!-- Google Tag Manager -->
+  
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  
+  })(window,document,'script','dataLayer','GTM-PM7BVQPT');</script>
+  
+  <!-- End Google Tag Manager -->
   <title>6th Avenue - The Best Clean Guaranteed</title>
   <link rel="icon" type="image/x-icon" href="./assets/Camada_1.png">
   <meta name="author" content="Flavia Sigoli"/>
@@ -17,6 +30,13 @@
   <meta name="robots" content="index, follow">
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PM7BVQPT"
+  
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  
+  <!-- End Google Tag Manager (noscript) -->
   <header>
     <div id="home">
       <nav class="navbar">
@@ -337,8 +357,8 @@
             </div>
           </div>
         </div>
-        <div class="license">
-          <img src="./assets/license.png" alt="" draggable="false">
+        <div class="request btn1 request2">
+          <a href="#request">Request a free quote</a>
         </div>
         <div class="contactcontainer" id="contact">
           <!-- <img class="contactbgimg-m" src="./assets/Union3.png" alt="" draggable="false">
