--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <li><a href="https://www.facebook.com/profile.php?id=61552970386979" target="_blank">
                     <img src="./assets/facebook-header.svg" alt="">
                     </a></li>
-                    <li><a href="#" target="_blank">                      
+                    <li><a href="https://www.google.com/search?q=6th+Ave+Cleaning&stick=H4sIAAAAAAAA_-NgU1I1qDAyTTQ2NLY0NTUwMEkzSzW1MqhITTIzMDZLsbA0NLA0NjJPWsQqYFaSoeBYlqrgnJOamJeZlw4AtsYZyjwAAAA&hl=pt-BR&mat=CU_Jqrg7Fm5nElcBEKoLaaYErZ3VfBiYHvjX1jcLlNtKSFUPueUpV0jT5NfjS7nOZA_fPuemRq5UDmnQzmTv-lql_qMURN5D9-2lxkn5UN9akR6vZTbPZR82wpPUeU8HBSg&authuser=0" target="_blank">                      
                       <img src="./assets/google-mb-header.svg" alt="">
                     </a></li>
                 </ul>
@@ -432,7 +432,7 @@
             <li><a href="https://www.facebook.com/profile.php?id=61552970386979" target="_blank">
               <img src="./assets/facebook-header.svg" alt="">
               </a></li>
-              <li><a href="#" target="_blank">                      
+              <li><a href="https://www.google.com/search?q=6th+Ave+Cleaning&stick=H4sIAAAAAAAA_-NgU1I1qDAyTTQ2NLY0NTUwMEkzSzW1MqhITTIzMDZLsbA0NLA0NjJPWsQqYFaSoeBYlqrgnJOamJeZlw4AtsYZyjwAAAA&hl=pt-BR&mat=CU_Jqrg7Fm5nElcBEKoLaaYErZ3VfBiYHvjX1jcLlNtKSFUPueUpV0jT5NfjS7nOZA_fPuemRq5UDmnQzmTv-lql_qMURN5D9-2lxkn5UN9akR6vZTbPZR82wpPUeU8HBSg&authuser=0" target="_blank">                      
                 <img src="./assets/google-mb-header.svg" alt="">
               </a></li>
           </ul>
