--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                   <li><a href="#about"> About </a></li>
                   <li><a href="#services"> Services </a></li>
                   <li><a href="#contact"> Contact </a></li>
+                  <li><a href="#review"> Reviews</a></li>
                 </ul>
               </div>
               <div class="menusocial">
@@ -69,7 +70,7 @@
                     </clipPath>
                     </defs>
                     </svg>
-                     Call now <br>(216)510-2031</a></li>
+                     Call now <br>(216) 510-2031</a></li>
                   <li><a href="https://www.instagram.com/6thavenuecleaning/" target="_blank">                      
                     <img src="./assets/ig-header.svg" alt="">
                     </a></li>
@@ -88,21 +89,8 @@
     <main>
         <div class="postercontainer">
           <div class="bgposter">
-            <video src="./assets/6thAvenue.mp4" autoplay muted loop playsinline></video>
+            <video src="./assets/Video-inicial.mp4" autoplay muted loop playsinline></video>
           </div>
-        <!--   <img class="bgposter" src="./assets/6thavenue-landing-backgroundV2.gif" alt="" draggable="false">
-            <div class="infos">
-              <div class="posterimglogo"><img src="./assets/Frame29.png" alt="" draggable="false"></div>
-              <div class="infostext"><h3>Make your life <span style="font-weight:bold;"><svg width="89" height="13" viewBox="5 0 100 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 2.5C0 1.11929 1.11929 0 2.5 0H174.5C175.881 0 177 1.11929 177 2.5C177 3.88071 175.881 5 174.5 5H2.5C1.11928 5 0 3.88071 0 2.5Z" fill="#FFBE50"/>
-                </svg>
-                easier</span> with one less thing to worry about<span style="color:#ffbe50;">.</span></h3>
-              <p>The best cleaning for your business spaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span></p></div>
-               -->
-            </div>
-        <!-- <div class="vetor1">
-          <img src="./assets/Vector19.png" alt="" draggable="false">
-        </div> -->
         </div>
         <div class="servicescontainer" id="services">
           <div class="services">
@@ -114,7 +102,7 @@
                 <div class="servicescard reveal" id="servicecard4">
                   <a href="./services/residentialcleaning.html">
                     <img src="./assets/services4.jpg" alt="" draggable="false">
-                    <h2>Residential Cleaning</h2>
+                    <h2>Residential <br>Cleaning</h2>
                     <a class="btnservice btn-1" href="./services/residentialcleaning.html">
                       See more  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20L10.575 18.6L16.175 13Z" fill="#002A68"/>
@@ -124,7 +112,7 @@
                 <div class="servicescard reveal" id="servicecard1">
                   <a href="./services/postconstructioncleaning.html">
                     <img src="./assets/services1.jpg" alt="" draggable="false">
-                    <h2>Post Construction Cleaning</h2>
+                    <h2>Post Construction <br>Cleaning</h2>
                     <a class="btnservice btn-1" href="./services/postconstructioncleaning.html">
                       See more  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20L10.575 18.6L16.175 13Z" fill="#002A68"/>
@@ -134,7 +122,7 @@
                 <div class="servicescard reveal" id="servicecard2">
                   <a href="./services/moveinoutcleaning.html">                    
                     <img src="./assets/services2.jpg" alt="" draggable="false">
-                    <h2>Move in  / Out Cleaning</h2>
+                    <h2>Move in / Out <br>Cleaning</h2>
                     <a class="btnservice btn-1" href="./services/moveinoutcleaning.html">
                       See more  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20L10.575 18.6L16.175 13Z" fill="#002A68"/>
@@ -222,7 +210,6 @@
             </ul>
           </div>
         </div>
-          <div class="missionborder"></div>
         </div>
         <!-- <div class="videocontainer">
           <video src="./assets/6th03192023_low.mp4" autoplay muted loop></video>
@@ -287,7 +274,7 @@
             </div>
           </div>
         </div>
-        <div class="testimonies" id="testimonies">
+        <div class="testimonies" id="review">
           <div class="testemoniestitle">
             <h3>What Our Clients Say</h3>
             <p>Take care of your needs the best way possible with the intention of build a <span style="font-weight:bold;">lasting and trustworthy relationship.</span> </p>
@@ -335,6 +322,14 @@
         <div class="vetor">
           <img src="./assets/Vector5.svg" alt="" draggable="false">
         </div>
+        <div class="ig-embed">
+            <h2>Follow us
+                <br> <span style="font-size: 40px;">On Instagram</span>
+            </h2>
+            <div class="ig-iframe">
+            <iframe src="https://www.instagram.com/6thavenuecleaning/embed" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+            </div>
+        </div>
         <div class="preferencecontainer">
           <div class="preference">
             <h3>Why book with us?</h3>
@@ -366,7 +361,7 @@
           <img class="contactbgimg" src="./assets/Union2.png" alt="" draggable="false"> -->
           <div class="contact">
             <div class="contactinfo">
-              <img src="./assets/Frame345.png" alt="logo 6th avenue" draggable="false">
+              <img src="./assets/Frame29.png" alt="logo 6th avenue" draggable="false">
             </div>
             <div class="form" >
               <div class="contacttitle">
