--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
               </div>
               <div class="menusocial">
                 <ul>
-                  <li class="btn1 callw"><a href="tel:+12165102031">
+                  <li class="btn1 callw"><a href="tel:+13303571958">
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_344_61)">
-                    <path d="M15.0501 5.8623C16.0268 6.05287 16.9244 6.53056 17.6281 7.23424C18.3318 7.93792 18.8095 8.83557 19.0001 9.8123M15.0501 1.8623C17.0793 2.08774 18.9716 2.99648 20.4163 4.43931C21.8609 5.88215 22.7721 7.77331 23.0001 9.8023M22.0001 17.7823V20.7823C22.0012 21.0608 21.9441 21.3365 21.8326 21.5917C21.721 21.8468 21.5574 22.0759 21.3521 22.2642C21.1469 22.4524 20.9046 22.5958 20.6408 22.685C20.377 22.7742 20.0974 22.8074 19.8201 22.7823C16.7429 22.4479 13.7871 21.3964 11.1901 19.7123C8.77388 18.177 6.72539 16.1285 5.19006 13.7123C3.50003 11.1035 2.4483 8.1333 2.12006 5.0423C2.09507 4.76577 2.12793 4.48707 2.21656 4.22393C2.30518 3.96079 2.44763 3.71899 2.63482 3.51393C2.82202 3.30886 3.04986 3.14501 3.30385 3.03283C3.55783 2.92064 3.8324 2.86257 4.11006 2.8623H7.11006C7.59536 2.85753 8.06585 3.02938 8.43382 3.34584C8.80179 3.66229 9.04213 4.10175 9.11005 4.5823C9.23668 5.54237 9.47151 6.48503 9.81006 7.3923C9.9446 7.75023 9.97372 8.13922 9.89396 8.51319C9.81421 8.88715 9.62892 9.23042 9.36005 9.50231L8.09006 10.7723C9.51361 13.2759 11.5865 15.3487 14.0901 16.7723L15.3601 15.5023C15.6319 15.2334 15.9752 15.0482 16.3492 14.9684C16.7231 14.8886 17.1121 14.9178 17.4701 15.0523C18.3773 15.3909 19.32 15.6257 20.2801 15.7523C20.7658 15.8208 21.2095 16.0655 21.5266 16.4398C21.8437 16.8141 22.0122 17.2919 22.0001 17.7823Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M15.0501 5.8623C16.0268 6.05287 16.9244 6.53056 17.6281 7.23424C18.3318 7.93792 18.8095 8.83557 19.0001 9.8123M15.0501 1.8623C17.0793 2.08774 18.9716 2.99648 20.4163 4.43931C21.8609 5.88215 22.7721 7.77331 23.0001 9.8023M22.0001 17.7823V20.7823C22.0012 21.0608 21.9441 21.3365 21.8326 21.5917C21.721 21.8468 21.5574 22.0759 21.3521 22.2642C21.1469 22.4524 20.9046 22.5958 20.6408 22.685C20.377 22.7742 20.0974 22.8074 19.8201 22.7823C16.7429 22.4479 13.7871 21.3964 11.1901 19.7123C8.77388 18.177 6.72539 16.1285 5.19006 13.7123C3.50003 11.1035 2.4483 8.1333 2.12006 5.0423C2.09507 4.76577 2.12793 4.48707 2.21656 4.22393C2.30518 3.96079 2.44763 3.71899 2.63482 3.51393C2.82202 3.30886 3.04986 3.14501 3.30385 3.03283C3.55783 2.92064 3.8324 2.86257 4.11006 2.8623H7.11006C7.59536 2.85753 8.06585 3.02938 8.43382 3.34584C8.80179 3.66229 9.04213 4.10175 9.11005 4.5823C9.23668 5.54237 9.47151 6.48503 9.81006 7.3923C9.9446 7.75023 9.97372 8.13922 9.89396 8.51319C9.81421 8.88715 9.62892 9.23042 9.36005 9.50231L8.09006 10.7723C9.51361 13.2759 11.5865 15.3487 14.0901 16.7723L15.3601 15.5023C15.6319 15.2334 15.9752 15.0482 16.3492 14.9684C16.7231 14.8886 17.1121 14.9178 17.4701 15.0523C18.3773 15.3909 19.32 15.6257 20.2801 15.7523C20.7658 15.8208 21.2095 16.0655 21.5266 16.4398C21.8437 16.8141 22.0122 17.2919 22.0001 17.7823Z" stroke="inherit" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </g>
                     <defs>
                     <clipPath id="clip0_344_61">
@@ -70,7 +70,7 @@
                     </clipPath>
                     </defs>
                     </svg>
-                     Call now <br>(216) 510-2031</a></li>
+                     Call now <br>(330) 357-1958</a></li>
                   <li><a href="https://www.instagram.com/6thavenuecleaning/" target="_blank">                      
                     <img src="./assets/ig-header.svg" alt="">
                     </a></li>
@@ -140,24 +140,6 @@
                   </a>
                 </div>
             </div>
-            <!-- <div class="contractorlink">
-              <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#clip0_231_70)">
-                  <path d="M0.0842379 3.83789L2.64051 8.31036C2.72673 8.46124 2.87087 8.57103 3.03995 8.61347L5.42445 9.20957L13.6038 17.3887L14.5078 16.4854L6.20042 8.17902C6.11892 8.09684 6.01586 8.03892 5.90404 8.01063L3.6125 7.43608L1.43613 3.62437L3.30197 1.7586L7.11381 3.93691L7.68905 6.22837C7.71667 6.34086 7.77527 6.44392 7.85678 6.52542L16.1641 14.8325L17.0674 13.9286L8.88804 5.74947L8.29192 3.3664C8.24948 3.19733 8.14036 3.05252 7.9888 2.9663L3.51617 0.410793C3.26694 0.268671 2.95305 0.311106 2.74963 0.513849L0.194033 3.06935C-0.0114117 3.27142 -0.0565421 3.58598 0.0849115 3.83722L0.0842379 3.83789Z" fill="#002A68"/>
-                  <path d="M26.6512 12.9149L12.5934 26.9722L11.6895 26.0683L25.7472 12.011L26.6505 12.9142L26.6512 12.9149Z" fill="#002A68"/>
-                  <path d="M10.1328 27.47C10.0169 27.2773 9.80948 27.1601 9.58518 27.1601H5.75111C5.5268 27.1601 5.31866 27.2773 5.20348 27.47L3.28645 30.6647C3.16453 30.8668 3.16453 31.12 3.28645 31.3228L5.20348 34.5175C5.31866 34.7094 5.5268 34.8273 5.75111 34.8273H9.58518C9.80948 34.8273 10.0176 34.7094 10.1328 34.5175L12.0498 31.3228C12.1718 31.12 12.1718 30.8668 12.0498 30.6647L10.1328 27.47ZM9.22346 33.5496H6.11283L4.57906 30.9941L6.11283 28.4379H9.22346L10.7572 30.9941L9.22346 33.5496Z" fill="#002A68"/>
-                  <path d="M30.6722 15.6582C34.8922 15.6723 38.3255 12.2627 38.3396 8.04215C38.3416 7.39957 38.2628 6.75968 38.1052 6.13731C38.0203 5.79514 37.6734 5.58633 37.3306 5.6712C37.2181 5.69949 37.1157 5.75742 37.0335 5.83892L33.056 9.81363L29.9002 8.76219L28.8474 5.60721L32.825 1.62914C33.0742 1.37925 33.0742 0.975106 32.825 0.725214C32.7428 0.643039 32.639 0.584439 32.5259 0.556822C28.4332 -0.479794 24.2751 1.99758 23.2391 6.09016C23.0815 6.71119 23.0034 7.34905 23.0054 7.98961C23.0067 8.49277 23.0586 8.99457 23.161 9.48695L9.1665 23.4803C8.6741 23.3786 8.17228 23.3267 7.66978 23.3247C3.43493 23.3247 0.00164795 26.7578 0.00164795 30.9925C0.00164795 35.2272 3.43493 38.6604 7.66978 38.6604C11.9046 38.6604 15.3379 35.2272 15.3379 30.9925C15.3366 30.4894 15.284 29.9876 15.1823 29.4952L18.5327 26.1449L19.9978 27.6099C20.2477 27.8591 20.6519 27.8591 20.9018 27.6099L21.221 27.2899C21.5013 27.0118 21.9539 27.0118 22.2341 27.2899C22.5143 27.5688 22.5143 28.0221 22.2355 28.3023L22.2341 28.3037L21.9148 28.6229C21.6656 28.8722 21.6656 29.277 21.9148 29.5262L29.5372 37.1482C31.5418 39.1716 34.8073 39.1865 36.8308 37.1813C38.8536 35.1767 38.8684 31.9113 36.8638 29.8879C36.853 29.8771 36.8422 29.8657 36.8308 29.8549L29.2085 22.2328C28.9592 21.9836 28.5544 21.9836 28.3052 22.2328L27.9859 22.5521C27.7057 22.8309 27.253 22.8309 26.9721 22.5521C26.6926 22.2732 26.6919 21.8199 26.9708 21.5404C26.9708 21.5404 26.9721 21.5397 26.9721 21.539L27.2921 21.2191C27.5413 20.9699 27.5413 20.5651 27.2921 20.3159L25.827 18.8509L29.1775 15.5005C29.6699 15.6022 30.1717 15.6541 30.6742 15.6561L30.6722 15.6582ZM33.1826 37.3833C32.7185 37.3826 32.2578 37.2985 31.8233 37.1354L36.8139 32.145C37.567 34.1482 36.5539 36.3824 34.5507 37.1354C34.1135 37.2998 33.6501 37.384 33.1826 37.3833ZM25.9436 20.7759C25.2356 21.6199 25.3468 22.8781 26.1908 23.5853C26.9324 24.207 28.0135 24.2064 28.7545 23.5833L35.9255 30.7602C36.0036 30.8383 36.0764 30.9205 36.1464 31.004L30.6829 36.4673C30.5994 36.3972 30.5166 36.3245 30.4384 36.2463L23.262 29.0695C23.97 28.2255 23.8588 26.9673 23.0148 26.2601C22.2732 25.6384 21.1914 25.639 20.4505 26.2614L19.4279 25.2389L24.9197 19.7554L25.9422 20.7752L25.9436 20.7759ZM28.5241 14.3494L14.0285 28.8418C13.8695 29.0008 13.8055 29.2312 13.8594 29.4487C14.7357 32.8913 12.6557 36.3932 9.21297 37.2695C5.77026 38.1458 2.26827 36.0658 1.39194 32.6232C0.515596 29.1806 2.59564 25.6788 6.03902 24.8025C7.08039 24.5378 8.17161 24.5378 9.21297 24.8025C9.43122 24.8557 9.66091 24.7917 9.81988 24.6341L24.3121 10.1417C24.4711 9.98269 24.5351 9.75233 24.4799 9.53477C23.6089 6.1326 25.662 2.66845 29.0643 1.79753C29.7076 1.63318 30.3724 1.56986 31.0346 1.61163L27.6639 4.98349C27.4928 5.15458 27.4329 5.40717 27.5097 5.63685L28.7875 9.47078C28.8515 9.6614 29.001 9.81093 29.1923 9.87425L33.0264 11.152C33.2554 11.2288 33.5086 11.1688 33.6797 10.9978L37.0504 7.62724C37.0578 7.74915 37.0618 7.86972 37.0618 7.99029C37.08 11.5016 34.2482 14.3622 30.7368 14.3804C30.1939 14.3831 29.653 14.3164 29.1276 14.1817C28.9094 14.1271 28.679 14.1911 28.5207 14.3494H28.5241Z" fill="#002A68"/>
-                  <path d="M33.0415 32.459L32.1376 33.363L25.7479 26.9735L26.6512 26.0696L33.0415 32.459Z" fill="#002A68"/>
-                  </g>
-                  <defs>
-                  <clipPath id="clip0_231_70">
-                  <rect width="38.3562" height="38.3562" fill="white" transform="translate(0 0.321777)"/>
-                  </clipPath>
-                  </defs>
-                  </svg>
-                <a href="https://maxwconstruction.com/" target="_blank"><span style="font-weight:bold;">Click here</span> if you need the best contractor in town for <span style="font-weight:bold;"> Remodeling and Construction</span>.                  
-              </a>
-            </div> -->
           </div>
         </div>
         <div class="request btn1">
@@ -165,7 +147,7 @@
         </div>
         <div class="missioncontainer" id="about">
           <div class="mission">
-            <h3>The Best Clean Guaranteed</h3>
+            <h3>The Best Cleaning Guaranteed</h3>
             <p>Our mission is to provide a clean and safe environment to all of our customers in a timely manner (we can do it fast accordingly to your needs) and with a fair and best price through our assessment process.</p>
           </div>
           <div class="missionborder"></div>
@@ -211,11 +193,7 @@
           </div>
         </div>
         </div>
-        <!-- <div class="videocontainer">
-          <video src="./assets/6th03192023_low.mp4" autoplay muted loop></video>
-        </div> -->
         <div class="diferences">
-          <!-- <img src="./assets/Union.png" alt="" draggable="false"> -->
            <div class="videoimgdif">
            <video class="" src="./assets/6th-substituicao.mp4" autoplay muted loop playsinline></video></div>
           <div class="diferencesgrid reveal">
@@ -279,8 +257,10 @@
             <h3>What Our Clients Say</h3>
             <p>Take care of your needs the best way possible with the intention of build a <span style="font-weight:bold;">lasting and trustworthy relationship.</span> </p>
           </div>
-          <div class="testemoniesgrid">
-            <div class="testemonycard reveal" id="testemonycard1">
+          <div class="testemoniesgrid reveal">
+            <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+            <div class="elfsight-app-3e9fcabe-4bda-4282-8c6b-695fd834c0f1" data-elfsight-app-lazy></div>
+            <!-- <div class="testemonycard reveal" id="testemonycard1">
               <h2>Anna S.</h2>
               <h6>Cleveland, OH</h6>
               <svg width="167" height="27" viewBox="0 0 167 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -316,7 +296,7 @@
               <path d="M153.266 0L156.297 9.32827H166.105L158.17 15.0935L161.201 24.4217L153.266 18.6565L145.331 24.4217L148.361 15.0935L140.426 9.32827H150.235L153.266 0Z" fill="#FFBE50"/>
               </svg>
               <p>6th Ave cleans our work every day, and they do a great job! Everyone on the team is super friendly and nice, and Pollyana is always super on top of it! Great attitude and a great job from them, can't say enough good things :) </p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="vetor">
@@ -333,9 +313,7 @@
         <div class="preferencecontainer">
           <div class="preference">
             <h3>Why book with us?</h3>
-            <p>With your decision, you’ve unlocked hassle-free care.
-              Just trust and we’ll deliver as promised. <span style="font-weight:bold;">Your place is our purpose!</span> 
-              Choose <span style="font-weight:bold;">6th Ave Cleaning,</span> Then Relax.</p>
+            <p>Our awesome team is here to make sure all your needs are met. Just let us know what you need, and we'll take care of the rest to ensure you're  <span style="font-weight:bold;">totally satisfied!</span> </p>
           </div>
           <div class="preferencegrid">
             <div class="preferencecard reveal" id="preferencecard1">
@@ -356,9 +334,6 @@
           <a href="#request">Request a free quote</a>
         </div>
         <div class="contactcontainer" id="contact">
-          <!-- <img class="contactbgimg-m" src="./assets/Union3.png" alt="" draggable="false">
-
-          <img class="contactbgimg" src="./assets/Union2.png" alt="" draggable="false"> -->
           <div class="contact">
             <div class="contactinfo">
               <img src="./assets/Frame29.png" alt="logo 6th avenue" draggable="false">
