--- a/services/residentialcleaning.html
+++ b/services/residentialcleaning.html
@@ -6,8 +6,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Urbanist:wght@400;500;600;800;900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
-  <title>6th Avenue - The Best Clean Guaranteed</title>
-  <link rel="icon" type="image/x-icon" href="./assets/Camada_1.png">
+  <title>6th Avenue - The Best Cleaning</title>
+  <link rel="icon" type="image/x-icon" href="../assets/icon.png">
   <meta name="author" content="Flavia Sigoli"/>
   <meta http-equiv="content-language" content="en-US" />
   <meta name="copyright" content="Copyright © 2024 6th Avenue" />
@@ -21,6 +21,18 @@
     <div id="home">
       <nav class="navbar">
           <div class="imgbar imgbarm"><img class="logo-header" src="../assets/Frame29.png" alt="logo 6th avenue"></div>
+          <li class="btn1 callnow callm"><a href="tel:+13303571958">
+            <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_344_61)">
+            <path d="M15.0501 5.8623C16.0268 6.05287 16.9244 6.53056 17.6281 7.23424C18.3318 7.93792 18.8095 8.83557 19.0001 9.8123M15.0501 1.8623C17.0793 2.08774 18.9716 2.99648 20.4163 4.43931C21.8609 5.88215 22.7721 7.77331 23.0001 9.8023M22.0001 17.7823V20.7823C22.0012 21.0608 21.9441 21.3365 21.8326 21.5917C21.721 21.8468 21.5574 22.0759 21.3521 22.2642C21.1469 22.4524 20.9046 22.5958 20.6408 22.685C20.377 22.7742 20.0974 22.8074 19.8201 22.7823C16.7429 22.4479 13.7871 21.3964 11.1901 19.7123C8.77388 18.177 6.72539 16.1285 5.19006 13.7123C3.50003 11.1035 2.4483 8.1333 2.12006 5.0423C2.09507 4.76577 2.12793 4.48707 2.21656 4.22393C2.30518 3.96079 2.44763 3.71899 2.63482 3.51393C2.82202 3.30886 3.04986 3.14501 3.30385 3.03283C3.55783 2.92064 3.8324 2.86257 4.11006 2.8623H7.11006C7.59536 2.85753 8.06585 3.02938 8.43382 3.34584C8.80179 3.66229 9.04213 4.10175 9.11005 4.5823C9.23668 5.54237 9.47151 6.48503 9.81006 7.3923C9.9446 7.75023 9.97372 8.13922 9.89396 8.51319C9.81421 8.88715 9.62892 9.23042 9.36005 9.50231L8.09006 10.7723C9.51361 13.2759 11.5865 15.3487 14.0901 16.7723L15.3601 15.5023C15.6319 15.2334 15.9752 15.0482 16.3492 14.9684C16.7231 14.8886 17.1121 14.9178 17.4701 15.0523C18.3773 15.3909 19.32 15.6257 20.2801 15.7523C20.7658 15.8208 21.2095 16.0655 21.5266 16.4398C21.8437 16.8141 22.0122 17.2919 22.0001 17.7823Z" stroke="inherit" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_344_61">
+            <rect width="24" height="24" fill="white" transform="translate(0 0.862305)"/>
+            </clipPath>
+            </defs>
+            </svg>
+             Call now <br>(330) 357-1958</a></li>
         <div class="btn-toggle menu_icon_box">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -38,7 +50,7 @@
               </div>
               <div class="menusocial">
                 <ul>
-                  <li class="btn1 callw"><a href="tel:+12165102031">
+                  <li class="btn1 callnow callw"><a href="tel:+13303571958">
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_344_61)">
                     <path d="M15.0501 5.8623C16.0268 6.05287 16.9244 6.53056 17.6281 7.23424C18.3318 7.93792 18.8095 8.83557 19.0001 9.8123M15.0501 1.8623C17.0793 2.08774 18.9716 2.99648 20.4163 4.43931C21.8609 5.88215 22.7721 7.77331 23.0001 9.8023M22.0001 17.7823V20.7823C22.0012 21.0608 21.9441 21.3365 21.8326 21.5917C21.721 21.8468 21.5574 22.0759 21.3521 22.2642C21.1469 22.4524 20.9046 22.5958 20.6408 22.685C20.377 22.7742 20.0974 22.8074 19.8201 22.7823C16.7429 22.4479 13.7871 21.3964 11.1901 19.7123C8.77388 18.177 6.72539 16.1285 5.19006 13.7123C3.50003 11.1035 2.4483 8.1333 2.12006 5.0423C2.09507 4.76577 2.12793 4.48707 2.21656 4.22393C2.30518 3.96079 2.44763 3.71899 2.63482 3.51393C2.82202 3.30886 3.04986 3.14501 3.30385 3.03283C3.55783 2.92064 3.8324 2.86257 4.11006 2.8623H7.11006C7.59536 2.85753 8.06585 3.02938 8.43382 3.34584C8.80179 3.66229 9.04213 4.10175 9.11005 4.5823C9.23668 5.54237 9.47151 6.48503 9.81006 7.3923C9.9446 7.75023 9.97372 8.13922 9.89396 8.51319C9.81421 8.88715 9.62892 9.23042 9.36005 9.50231L8.09006 10.7723C9.51361 13.2759 11.5865 15.3487 14.0901 16.7723L15.3601 15.5023C15.6319 15.2334 15.9752 15.0482 16.3492 14.9684C16.7231 14.8886 17.1121 14.9178 17.4701 15.0523C18.3773 15.3909 19.32 15.6257 20.2801 15.7523C20.7658 15.8208 21.2095 16.0655 21.5266 16.4398C21.8437 16.8141 22.0122 17.2919 22.0001 17.7823Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -49,7 +61,7 @@
                     </clipPath>
                     </defs>
                     </svg>
-                     Call now <br>(216)510-2031</a></li>
+                     Call now <br>(330) 357-1958</a></li>
                   <li><a href="https://www.instagram.com/6thavenuecleaning/" target="_blank">                      
                     <img src="../assets/ig-header.svg" alt="">
                     </a></li>
@@ -72,7 +84,7 @@
            <div class="content content1">
              <h1>Residential<br>Cleaning</h1>
              <p>Experience the difference with 6th Avenue Cleaning. We understand that a clean home is crucial for your comfort and well-being. Our top-notch residential cleaning services are tailored to exceed your expectations, leaving your home spotless, fresh, and welcoming.</p>
-             <a class="bntpop" href="tel:+12165102031">
+             <a class="bntpop" href="tel:+13303571958">
               <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_344_61)">
               <path d="M15.0501 5.8623C16.0268 6.05287 16.9244 6.53056 17.6281 7.23424C18.3318 7.93792 18.8095 8.83557 19.0001 9.8123M15.0501 1.8623C17.0793 2.08774 18.9716 2.99648 20.4163 4.43931C21.8609 5.88215 22.7721 7.77331 23.0001 9.8023M22.0001 17.7823V20.7823C22.0012 21.0608 21.9441 21.3365 21.8326 21.5917C21.721 21.8468 21.5574 22.0759 21.3521 22.2642C21.1469 22.4524 20.9046 22.5958 20.6408 22.685C20.377 22.7742 20.0974 22.8074 19.8201 22.7823C16.7429 22.4479 13.7871 21.3964 11.1901 19.7123C8.77388 18.177 6.72539 16.1285 5.19006 13.7123C3.50003 11.1035 2.4483 8.1333 2.12006 5.0423C2.09507 4.76577 2.12793 4.48707 2.21656 4.22393C2.30518 3.96079 2.44763 3.71899 2.63482 3.51393C2.82202 3.30886 3.04986 3.14501 3.30385 3.03283C3.55783 2.92064 3.8324 2.86257 4.11006 2.8623H7.11006C7.59536 2.85753 8.06585 3.02938 8.43382 3.34584C8.80179 3.66229 9.04213 4.10175 9.11005 4.5823C9.23668 5.54237 9.47151 6.48503 9.81006 7.3923C9.9446 7.75023 9.97372 8.13922 9.89396 8.51319C9.81421 8.88715 9.62892 9.23042 9.36005 9.50231L8.09006 10.7723C9.51361 13.2759 11.5865 15.3487 14.0901 16.7723L15.3601 15.5023C15.6319 15.2334 15.9752 15.0482 16.3492 14.9684C16.7231 14.8886 17.1121 14.9178 17.4701 15.0523C18.3773 15.3909 19.32 15.6257 20.2801 15.7523C20.7658 15.8208 21.2095 16.0655 21.5266 16.4398C21.8437 16.8141 22.0122 17.2919 22.0001 17.7823Z" stroke="#002A68" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -83,7 +95,7 @@
               </clipPath>
               </defs>
               </svg>
-               Call now <br>(216)510-2031</a>
+               Call now <br>(330) 357-1958</a>
               <img src="../assets/popup1.png" alt="dusting">
            </div>
          </div>
